OO-3514: separate administrator and system administrator, remove access of administrators to administration site, restrict access of system administrator to user management